--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Urban
 <section class="hero diagonal">
 	<div class="container">
 		<h2 class="editable">
-			We build websites NOAM
+			We build websites NOAM 17:20
 		</h2>
 		<p class="subtext editable">This is the <strong>Urban</strong> template from <a href="http://cloudcannon.com/">CloudCannon</a>. Urban is a strong foundation for the web presence of your agency.</p>
 		<p><a class="button alt" href="{{ site.baseurl }}/contact/">Contact Us</a></p>
